cambios en el indexHTML

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Alura YOGA</title>
+    <link rel="icon" type="image/png" href="./asstes/img/icon-alurayoga.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -113,7 +115,8 @@
           Licenciada en Comunicación Social - Mención Publicidad y RRPP de la Universidad Arturo Michelena. Experiencia en periodismo, comunicación digital, relaciones públicas, manejo de redes sociales. Constancia y responsabilidad como valores claves para el crecimiento profesional.
         </p>
         <p class="sobre__text">
-          Comunicadora Social, mención Publicidad y RRPP. Estudiante ALURA LATAM + Oracle Next Education con especialización en Front-End. Instructora y fundadora de Coffeeyyoga Studio Online, me encanta ser portadora de salud, bienestar y salud.
+          Comunicadora Social, mención Publicidad y RRPP, instructora y fundadora de Coffeeyyoga Studio Online, un espacio para cultivar salud y bienestar. Actualmente soy estudiante ALURA LATAM + Oracle Next Education con especialización en Front-End, en simultaneo estoy realizando formaciones en Amazon Web Service y Platzi. Considero que la tecnología ha avanzado a pasos agigantados en los últimos años, y su impacto en nuestras vidas es cada vez mayor. Desde la forma en que nos comunicamos hasta la forma en que trabajamos y nos divertimos, la tecnología está cambiando el mundo a nuestro alrededor. Es cierto que la tecnología es el futuro, y quiero ser parte de esa fuerza impulsora en el desarrollo de nuestra sociedad. 
+  
         </p>
       </div>
     </section>
@@ -221,7 +224,7 @@
         </div>
         <div class="formacion_academica__cards__card">
           <div class="formacion_academica__img">
-            <img src="asstes/img/formacion-academica/img--aws-formacion.svg" alt="Amazon web service" />
+            <img src="./asstes/img/formacion-academica/img-ia.png" alt="Amazon web service" />
           </div>
           <div class="formacion_academica__cards__content">
             <h5 class="formacion_academica__cards__title">
@@ -251,8 +254,8 @@
         <div class="experiencia_profesional__cards__card">
           <div class="experiencia_profesional__card__imagen">
             <img
-              src="asstes/img/experiencia-profesional/experiencia-profesional-portafolio.png"
-              alt="portafolio-1"
+              src="./asstes/img/experiencia-profesional/experiencia-profesional-portafolio.svg"
+              alt="1-portafolio"
             />
           </div>
           <div class="experiencia_profesional__content">
@@ -260,15 +263,15 @@
               Portafolio creado con html, CSS y Javascript
             </h4>
             <p class="experiencia_profesional__card__subtitle">
-              Challenge Personal
+              Challenge Alura + Oracle
             </p>
             <div class="experiencia_profesional__buttons">
-              <a href="https://github.com/Coffeeyyoga/encriptador_de_texto" target="_blank">
+              <a href="https://github.com/Coffeeyyoga/Portafolio" target="_blank">
                 <button class="experiencia_profesional__button--repo">
                   Repositorio
                 </button>
               </a>
-              <a href="https://coffeeyyoga.github.io/encriptador_de_texto/" target="_blank">
+              <a href="https://coffeeyyoga.github.io/Portafolio/" target="_blank">
                 <button class="experiencia_profesional__button--azul">
                   Ver demo
                 </button>
@@ -279,8 +282,8 @@
         <div class="experiencia_profesional__cards__card">
           <div class="experiencia_profesional__card__imagen">
             <img
-              src="asstes/img/experiencia-profesional/experiencia-profesional-portafolio.png"
-              alt="portafolio-2"
+              src="./asstes/img/experiencia-profesional/experiencia-profesional-encriptador.png"
+              alt="2-portafolio"
             />
           </div>
           <div class="experiencia_profesional__content">
@@ -288,7 +291,7 @@
               Encriptador de texto
             </h4>
             <p class="experiencia_profesional__card__subtitle">
-              Challenge Oracle
+              Challenge Alura + Oracle
             </p>
             <div class="experiencia_profesional__buttons">
               <a href="https://github.com/Coffeeyyoga/encriptador_de_texto">
@@ -307,8 +310,8 @@
         <div class="experiencia_profesional__cards__card">
           <div class="experiencia_profesional__card__imagen">
             <img
-              src="asstes/img/experiencia-profesional/experiencia-profesional-portafolio.png"
-              alt="encriptador"
+              src="./asstes/img/experiencia-profesional/experiencia-profesional-portafolio.svg"
+              alt="validacion"
             />
           </div>
           <div class="experiencia_profesional__content">
@@ -341,8 +344,8 @@
         <div class="experiencia_profesional__cards__card">
           <div class="experiencia_profesional__card__imagen">
             <img
-              src="asstes/img/experiencia-profesional/experiencia-profesional-portafolio.png"
-              alt="ahorcado"
+              src="./asstes/img/experiencia-profesional/experiencia-profesional-encriptador.png"
+              alt="E-commer"
             />
           </div>
           <div class="experiencia_profesional__content">
