--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         </div>
         <div class="formacion_academica__cards__card">
           <div class="formacion_academica__img">
-            <img src="./asstes/img/formacion-academica/img-ia.png" alt="Amazon web service" />
+            <img src="./asstes/img/formacion-academica/img--aws-formacion.svg" alt="Amazon web service" />
           </div>
           <div class="formacion_academica__cards__content">
             <h5 class="formacion_academica__cards__title">
