modificaciones del css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alura YOGA</title>
-    <link rel="icon" type="image/png" href="./asstes/img/icon-alurayoga.svg" />
+    <link rel="icon" type="image/svg" href="./asstes/img/logo/logo-portafolio-keren-parra.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -61,7 +61,7 @@
       <section class="home" id="home">
         <div class="home__content">
           <h2 class="home__title">
-            Hola mi nombre es Keren Parra de Venezuela y construyo páginas web
+            Hola mi nombre es Keren Parra, me apasiona el mundo de la tecnología y desarrollo web.
           </h2>
           <p class="home__text">
             Soy formada en Desarrollo web Front-End y actualmente estoy
@@ -217,7 +217,7 @@
           </div>
           <div class="formacion_academica__cards__content">
             <h5 class="formacion_academica__cards__title">
-              Desarroladora Front-End
+              Developer Front-End
             </h5>
             <p class="formacion_academica__cards__text">2023 - Oracle + Alura</p>
           </div>
@@ -230,7 +230,7 @@
             <h5 class="formacion_academica__cards__title">
               Formación en Could computing
             </h5>
-            <p class="formacion_academica__cards__text">2023 - AWS</p>
+            <p class="formacion_academica__cards__text">2023 - Amazon Web Service</p>
           </div>
         </div>
         <div class="formacion_academica__cards__card">
@@ -310,20 +310,20 @@
         <div class="experiencia_profesional__cards__card">
           <div class="experiencia_profesional__card__imagen">
             <img
-              src="./asstes/img/experiencia-profesional/experiencia-profesional-portafolio.svg"
+              src="./asstes/img/experiencia-profesional/experiencia-profesional-ecommerce.svg"
               alt="validacion"
             />
           </div>
           <div class="experiencia_profesional__content">
             <h4 class="experiencia_profesional__card__title">
-              Validación formulario
+              E-commerce
             </h4>
             <p class="experiencia_profesional__card__subtitle">
               Challenge Oracle
             </p>
             <div class="experiencia_profesional__buttons">
               <a
-                href="https://github.com/Coffeeyyoga/encriptador_de_texto"
+                href="https://github.com/Coffeeyyoga/E-commerce"
                 target="_blank"
               >
                 <button class="experiencia_profesional__button--repo">
@@ -331,41 +331,7 @@
                 </button>
               </a>
               <a
-                href="https://coffeeyyoga.github.io/encriptador_de_texto/"
-                target="_blank"
-              >
-                <button class="experiencia_profesional__button--azul">
-                  Ver demo
-                </button>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="experiencia_profesional__cards__card">
-          <div class="experiencia_profesional__card__imagen">
-            <img
-              src="./asstes/img/experiencia-profesional/experiencia-profesional-encriptador.png"
-              alt="E-commer"
-            />
-          </div>
-          <div class="experiencia_profesional__content">
-            <h4 class="experiencia_profesional__card__title">
-              E-commer
-            </h4>
-            <p class="experiencia_profesional__card__subtitle">
-              Challenge Oracle
-            </p>
-            <div class="experiencia_profesional__buttons">
-              <a
-                href=" https://github.com/Coffeeyyoga/encriptador_de_texto"
-                target="_blank"
-              >
-                <button class="experiencia_profesional__button--repo">
-                  Repositorio
-                </button>
-              </a>
-              <a
-                href="https://coffeeyyoga.github.io/encriptador_de_texto/"
+                href="file:///C:/Users/chuji/OneDrive/Documentos/ecommer/index.html"
                 target="_blank"
               >
                 <button class="experiencia_profesional__button--azul">
@@ -424,7 +390,7 @@
       </div>
     </section>
     <footer class="footer">
-      <p class="footer__content">Desarrollado por Keren Parra 2023</p>
+      <p class="footer__content">Desarrollado por Keren Parra - Oracle Next Education 2023</p>
     </footer>
     <script src="./js/formulario.js" type="module"></script>
   </body>
