--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                 </button>
               </a>
               <a
-                href="file:///C:/Users/chuji/OneDrive/Documentos/ecommer/index.html"
+                href="https://coffeeyyoga.github.io/E-commerce/"
                 target="_blank"
               >
                 <button class="experiencia_profesional__button--azul">
